// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import module from \\"<MONOREPO_DIR>/adapters/subscribe-adapters/resolve-subscribe-socket.io/lib/client/index.js\\"

const options = {}

export default { module, options }
"
`;

exports[`base config works correctly [server] 1`] = `
"
import module from \\"<MONOREPO_DIR>/adapters/subscribe-adapters/resolve-subscribe-socket.io/lib/server/index.js\\"

const options = {}

export default { module, options }
"
`;
